Base folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Jam2018/Intermediate/
 Jam2018/Jam2018.VC.db
 Jam2018/Binaries/
 Jam2018/Saved/Config/CrashReportClient/
+Jam2018/Saved/
+Jam2018/Jam2018.VC.VC.opendb
