--- a/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -45,10 +45,11 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@MAXPOUTWER
 LastExecutedLaunchName=MAXPOUTWER
+NewWindowPosition=(X=315,Y=143)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -85,13 +86,16 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
 
 [ModuleFileTracking]
-Jam2018.TimeStamp=2018.01.26-20.34.42
-Jam2018.LastCompileMethod=Unknown
+Jam2018.TimeStamp=2018.01.27-01.08.56
+Jam2018.LastCompileMethod=External
 PakFile.TimeStamp=2018.01.09-15.31.48
 PakFile.LastCompileMethod=Unknown
 SandboxFile.TimeStamp=2018.01.09-15.31.50
@@ -618,13 +622,23 @@ HierarchicalLODOutliner.TimeStamp=2018.01.09-15.31.43
 HierarchicalLODOutliner.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2018.01.09-15.31.46
 MovieSceneCapture.LastCompileMethod=Unknown
+BlueprintProfiler.TimeStamp=2018.01.09-15.31.37
+BlueprintProfiler.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2018.01.09-15.31.37
+BlueprintGraph.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2018.01.09-15.31.50
+SequencerWidgets.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2018.01.09-15.31.42
+ExternalImagePicker.LastCompileMethod=Unknown
+UATHelper.TimeStamp=2018.01.09-15.31.53
+UATHelper.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1300.000 Y=740.000
+WindowSize=X=1320.000 Y=760.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -641,7 +655,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/Repos/GIT/Power Jammers/Jam2018/Content/
+UNR=D:/Repos/GIT/Power Jammers/Jam2018/Content/FirstPersonCPP/Maps
 BRUSH=D:/Repos/GIT/Power Jammers/Jam2018/Content/
 FBX=D:/Repos/GIT/Power Jammers/Jam2018/Content/
 FBXAnim=D:/Repos/GIT/Power Jammers/Jam2018/Content/
@@ -653,5 +667,431 @@ MeshImportExport=D:/Repos/GIT/Power Jammers/Jam2018/Content/
 WorldRoot=D:/Repos/GIT/Power Jammers/Jam2018/Content/
 Level=D:/Repos/GIT/Power Jammers/Jam2018/Content/
 Project=C:/Program Files/Epic Games/UE_4.16/
+
+[MRU]
+MRUItem0=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
+
+[WidgetTemplatesExpanded]
+Extra=True
+Input=True
+Optimization=True
+Panel=True
+Primitive=False
+Special Effects=False
+Uncategorized=False
+
+[DetailCustomWidgetExpansion]
+GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameplayTagsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameplayTagsDeveloperSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameMapsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MoviePlayerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ProjectPackagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+HardwareTargetingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AssetManagerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AISystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AnimationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AudioSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CollisionProfile=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ConsoleSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CookerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CrowdManager=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+EndUserSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameplayDebuggerConfig=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GarbageCollectionSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+Engine=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+InputSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RecastNavMesh=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+NavigationSystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+NetworkSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+NiagaraSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PhysicsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RendererSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RendererOverrideSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+SlateSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+StreamingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+TutorialSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UserInterfaceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LevelEditor2DSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+EditorProjectAppearanceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ClassViewerProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MovieSceneToolsProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PaperImporterSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UMGEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AndroidRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ShaderPlatformQualitySettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AndroidSDKSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+HTML5TargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+IOSRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LinuxTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MacTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+WindowsTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AvfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LevelSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+
+[DetailCategories]
+FirstPersonCharacter_C.TransformCommon=True
+FirstPersonCharacter_C.Animation=True
+FirstPersonCharacter_C.Mesh=True
+FirstPersonCharacter_C.CameraSettings=True
+FirstPersonCharacter_C.Color Grading=True
+FirstPersonCharacter_C.Tonemapper=True
+FirstPersonCharacter_C.Mobile Tonemapper=True
+FirstPersonCharacter_C.Lens=True
+FirstPersonCharacter_C.Rendering Features=True
+FirstPersonCharacter_C.Tick=True
+FirstPersonCharacter_C.ComponentTick=True
+FirstPersonCharacter_C.Clothing=True
+FirstPersonCharacter_C.ClothingSimulation=True
+FirstPersonCharacter_C.Physics=True
+FirstPersonCharacter_C.Collision=True
+FirstPersonCharacter_C.Lighting=True
+FirstPersonCharacter_C.Rendering=True
+FirstPersonCharacter_C.Tags=True
+FirstPersonCharacter_C.ComponentReplication=True
+FirstPersonCharacter_C.Activation=True
+FirstPersonCharacter_C.Variable=True
+FirstPersonCharacter_C.Cooking=True
+FirstPersonCharacter_C.Camera=True
+FirstPersonCharacter_C.MotionController=True
+FirstPersonCharacter_C.Gameplay=True
+FirstPersonCharacter_C.Projectile=True
+FirstPersonCharacter_C.Character Movement: Jumping / Falling=True
+FirstPersonCharacter_C.Character Movement (General Settings)=True
+FirstPersonCharacter_C.Character Movement: Walking=True
+FirstPersonCharacter_C.Character Movement: Swimming=True
+FirstPersonCharacter_C.Character Movement: Flying=True
+FirstPersonCharacter_C.Character Movement: Custom Movement=True
+FirstPersonCharacter_C.Character Movement (Rotation Settings)=True
+FirstPersonCharacter_C.Character Movement: Physics Interaction=True
+FirstPersonCharacter_C.Character Movement (Networking)=True
+FirstPersonCharacter_C.Character Movement=True
+FirstPersonCharacter_C.Character Movement: Avoidance=True
+FirstPersonCharacter_C.Character Movement: NavMesh Movement=True
+FirstPersonCharacter_C.RootMotion=True
+FirstPersonCharacter_C.NavMovement=True
+FirstPersonCharacter_C.Velocity=True
+FirstPersonCharacter_C.PlanarMovement=True
+FirstPersonCharacter_C.MovementComponent=True
+FirstPersonCharacter_C.Shape=True
+FirstPersonCharacter_C.Navigation=True
+FirstPersonCharacter_C.Character=True
+FirstPersonCharacter_C.Pawn=True
+FirstPersonCharacter_C.Replication=True
+FirstPersonCharacter_C.Input=True
+FirstPersonCharacter_C.Actor=True
+FirstPersonCharacter_C.Materials=True
+FirstPersonExampleMap_C.Tick=True
+FirstPersonExampleMap_C.Replication=True
+FirstPersonExampleMap_C.Input=True
+FirstPersonExampleMap_C.Actor=True
+CanvasPanel.Behavior=True
+CanvasPanel.Performance=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Navigation=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Performance=True
+VerticalBox.Render Transform=True
+VerticalBox.Navigation=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Behavior=True
+Button.Performance=True
+Button.Render Transform=True
+Button.Navigation=True
+Button.Events=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Performance=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Navigation=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Performance=True
+ProgressBar.Render Transform=True
+ProgressBar.Navigation=True
+Image.Layout=True
+Image.Appearance=True
+Image.Behavior=True
+Image.Performance=True
+Image.Render Transform=True
+Image.Navigation=True
+Image.Events=True
+ObjectProperty.Variable=True
+ObjectProperty.DefaultValueCategory=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+HUD_C.Appearance=True
+HUD_C.Interaction=True
+HUD_C.Input=True
+HUD_C.Designer=True
+HUD_C.Layout=True
+HUD_C.Behavior=True
+HUD_C.Performance=True
+HUD_C.Render Transform=True
+HUD_C.Navigation=True
+EditableTextBox.Layout=True
+EditableTextBox.Content=True
+EditableTextBox.Style=True
+EditableTextBox.Appearance=True
+EditableTextBox.Behavior=True
+EditableTextBox.Performance=True
+EditableTextBox.Render Transform=True
+EditableTextBox.Navigation=True
+EditableTextBox.Events=True
+ObjectProperty.Events=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableSet.Events=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Replication=True
+GameplayTagsDeveloperSettings.GameplayTags=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Blueprints=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.Gameplay Tasks=True
+AISystem.EQS=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Quality=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CrowdManager.Config=True
+EndUserSettings.Privacy=True
+EndUserSettings.PrivacyDetails=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Framerate=True
+InputSettings.Bindings=True
+InputSettings.MouseProperties=True
+InputSettings.ViewportProperties=True
+InputSettings.Mobile=True
+InputSettings.Console=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+NavigationSystem.NavigationSystem=True
+NavigationSystem.Navigation Enforcing=True
+NavigationSystem.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+NetworkSettings.replication=True
+NiagaraSettings.Niagara=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.PhysicalSurfaces=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.Reflections=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Lighting=True
+RendererSettings.Tessellation=True
+RendererSettings.Translucency=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Debugging=True
+RendererSettings.VR=True
+RendererSettings.Editor=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+RendererOverrideSettings.Miscellaneous=True
+SlateSettings.VirtualKeyboard=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.IO=True
+StreamingSettings.LevelStreaming=True
+TutorialSettings.Tutorials=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+UMGEditorProjectSettings.ShowHideWidgetClasses=True
+AndroidRuntimeSettings.APKPackaging=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.AdvancedAPKPackaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.DaydreamAppTile=True
+AndroidRuntimeSettings.DataCooker=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+HTML5TargetSettings.Emscripten=True
+HTML5TargetSettings.Packaging=True
+HTML5TargetSettings.Launch=True
+HTML5TargetSettings.Amazon_S3=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.Required Icons=True
+IOSRuntimeSettings.Optional Icons=True
+IOSRuntimeSettings.Launch Images=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+MacTargetSettings.Targeted RHIs=True
+MacTargetSettings.Rendering=True
+MacTargetSettings.Splash=True
+MacTargetSettings.Icon=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.OS Info=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+AvfMediaSettings.Debug=True
+LevelSequenceEditorSettings.Tracks=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
+GameHUD_C.Tick=True
+GameHUD_C.HUD=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+GameHUD_C.Default=True
+JamGameMode_C.Tick=True
+JamGameMode_C.GameMode=True
+JamGameMode_C.Classes=True
+JamGameMode_C.Game=True
+MyJam2018HUD_C.Tick=True
+MyJam2018HUD_C.HUD=True
+HUDWidget_C.Appearance=True
+HUDWidget_C.Interaction=True
+HUDWidget_C.Input=True
+HUDWidget_C.Designer=True
+HUDWidget_C.Layout=True
+HUDWidget_C.Behavior=True
+HUDWidget_C.Performance=True
+HUDWidget_C.Render Transform=True
+HUDWidget_C.Navigation=True
+
+[AssetEditorToolkitTabLocation]
+/Game/FirstPersonCPP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
+/Game/HUD/GameHUD.GameHUD=0
+/Game/Dev/HUD/GameHUD.GameHUD=0
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+
+[DetailPropertyExpansion]
+VerticalBox="\"Object.Layout.Slot.Object.Layout.Layout"
+PanelWidget="\"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
+ProgressBar="\"Object.Appearance.FillColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Render Transform.RenderTransform\" "
+EditableTextBox="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
+HUD_C="\"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object.Render Transform.RenderTransform\" "
+EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
+HUDWidget_C="\"Object.Render Transform.RenderTransform\" "
+HorizontalBox="\"Object.Render Transform.RenderTransform\" "
 
 
