no explosive crowd manager

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ Jam2018/Saved/Logs/Jam2018-backup-2018.01.27-01.11.52.log
 Jam2018/Saved/Logs/Jam2018-backup-2018.01.27-03.27.44.log
 Jam2018/Saved/Logs/Jam2018.log
 *.opendb
+Jam2018/Saved/
