--- a/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -86,16 +86,16 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Maps
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
+LastLevel=/Game/FirstPersonCPP/Maps/TestMapMikel
 
 [ModuleFileTracking]
-Jam2018.TimeStamp=2018.01.27-02.27.41
-Jam2018.LastCompileMethod=External
+Jam2018.TimeStamp=2018.01.27-02.49.08
+Jam2018.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.01.25-18.25.31
 PakFile.LastCompileMethod=External
 SandboxFile.TimeStamp=2018.01.25-18.25.34
@@ -632,7 +632,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1350.000 Y=790.000
+WindowSize=X=1360.000 Y=800.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -649,7 +649,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/Repos/GIT/Power Jammers/Jam2018/Content/
+UNR=../../../../../Mitx-PC/Game Jam 2018/Jam2018/Content/FirstPersonCPP/Maps
 BRUSH=D:/Repos/GIT/Power Jammers/Jam2018/Content/
 FBX=D:/Repos/GIT/Power Jammers/Jam2018/Content/
 FBXAnim=D:/Repos/GIT/Power Jammers/Jam2018/Content/
@@ -1143,6 +1143,10 @@ Blueprint.Packaging=True
 Blueprint.Thumbnail=True
 BP_JamCrowdManager_C.JamCrowdManager=True
 K2Node_VariableGet.DefaultValueCategory=True
+Volume.TransformCommon=True
+Volume.BrushSettings=True
+Volume.Actor=True
+Actor.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonCPP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -1178,13 +1182,14 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 TestActor_C="\"Object.Actor.Tags\" "
 
 [MRU]
-MRUItem0=/Game/FirstPersonCPP/Maps/Test
-MRUItem1=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
-MRUItem2=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem3=/Game/StarterContent/Maps/Test
-MRUItem4=/Game/StarterContent/Maps/NewWorld
-MRUItem5=/Game/StarterContent/Maps/StarterMap
-MRUItem6=/Game/StarterContent/Maps/Minimal_Default
+MRUItem0=/Game/FirstPersonCPP/Maps/TestMapMikel
+MRUItem1=/Game/FirstPersonCPP/Maps/Test
+MRUItem2=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
+MRUItem3=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem4=/Game/StarterContent/Maps/Test
+MRUItem5=/Game/StarterContent/Maps/NewWorld
+MRUItem6=/Game/StarterContent/Maps/StarterMap
+MRUItem7=/Game/StarterContent/Maps/Minimal_Default
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1265,8 +1270,8 @@ LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
 
 [PlacementMode]
-RecentlyPlaced=/Game/BP_JamCrowdManager.BP_JamCrowdManager;
 RecentlyPlaced=/Game/TestActor.TestActor;
+RecentlyPlaced=/Game/BP_JamCrowdManager.BP_JamCrowdManager;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
 [MessageLog]
