Some more folder reorganization

--- a/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -94,8 +94,8 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
 
 [ModuleFileTracking]
-Jam2018.TimeStamp=2018.01.27-01.08.56
-Jam2018.LastCompileMethod=External
+Jam2018.TimeStamp=2018.01.27-02.44.13
+Jam2018.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.01.09-15.31.48
 PakFile.LastCompileMethod=Unknown
 SandboxFile.TimeStamp=2018.01.09-15.31.50
@@ -669,7 +669,9 @@ Level=D:/Repos/GIT/Power Jammers/Jam2018/Content/
 Project=C:/Program Files/Epic Games/UE_4.16/
 
 [MRU]
-MRUItem0=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
+MRUItem0=/Game/Maps/FirstPersonExampleMap
+MRUItem1=/Game/Sound/FirstPersonExampleMap
+MRUItem2=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
 
 [WidgetTemplatesExpanded]
 Extra=True
@@ -1066,11 +1068,113 @@ HUDWidget_C.Behavior=True
 HUDWidget_C.Performance=True
 HUDWidget_C.Render Transform=True
 HUDWidget_C.Navigation=True
+PlayerCharacter_C.Camera=True
+PlayerCharacter_C.Tick=True
+PlayerCharacter_C.Gameplay=True
+PlayerCharacter_C.Projectile=True
+PlayerCharacter_C.Character=True
+PlayerCharacter_C.Pawn=True
+PlayerCharacter_C.Rendering=True
+PlayerCharacter_C.Replication=True
+PlayerCharacter_C.Input=True
+PlayerCharacter_C.Actor=True
+BP_HUDWidget_C.Appearance=True
+BP_HUDWidget_C.Interaction=True
+BP_HUDWidget_C.Input=True
+BP_HUDWidget_C.Designer=True
+BP_HUDWidget_C.Layout=True
+BP_HUDWidget_C.Behavior=True
+BP_HUDWidget_C.Performance=True
+BP_HUDWidget_C.Render Transform=True
+BP_HUDWidget_C.Navigation=True
+BP_FirstPersonCharacter_C.Variable=True
+BP_FirstPersonCharacter_C.TransformCommon=True
+BP_FirstPersonCharacter_C.Sockets=True
+BP_FirstPersonCharacter_C.CameraSettings=True
+BP_FirstPersonCharacter_C.Color Grading=True
+BP_FirstPersonCharacter_C.Tonemapper=True
+BP_FirstPersonCharacter_C.Mobile Tonemapper=True
+BP_FirstPersonCharacter_C.Lens=True
+BP_FirstPersonCharacter_C.Rendering Features=True
+BP_FirstPersonCharacter_C.Tags=True
+BP_FirstPersonCharacter_C.ComponentReplication=True
+BP_FirstPersonCharacter_C.Activation=True
+BP_FirstPersonCharacter_C.Cooking=True
+BP_FirstPersonCharacter_C.Events=True
+BP_FirstPersonCharacter_C.Animation=True
+BP_FirstPersonCharacter_C.Mesh=True
+BP_FirstPersonCharacter_C.Materials=True
+BP_FirstPersonCharacter_C.Clothing=True
+BP_FirstPersonCharacter_C.ClothingSimulation=True
+BP_FirstPersonCharacter_C.Physics=True
+BP_FirstPersonCharacter_C.Collision=True
+BP_FirstPersonCharacter_C.Lighting=True
+BP_FirstPersonCharacter_C.Rendering=True
+BP_FirstPersonCharacter_C.Character Movement: Jumping / Falling=True
+BP_FirstPersonCharacter_C.Character Movement (General Settings)=True
+BP_FirstPersonCharacter_C.Character Movement: Walking=True
+BP_FirstPersonCharacter_C.Character Movement: Swimming=True
+BP_FirstPersonCharacter_C.Character Movement: Flying=True
+BP_FirstPersonCharacter_C.Character Movement: Custom Movement=True
+BP_FirstPersonCharacter_C.Character Movement (Rotation Settings)=True
+BP_FirstPersonCharacter_C.Character Movement: Physics Interaction=True
+BP_FirstPersonCharacter_C.Character Movement (Networking)=True
+BP_FirstPersonCharacter_C.Character Movement=True
+BP_FirstPersonCharacter_C.Character Movement: Avoidance=True
+BP_FirstPersonCharacter_C.Character Movement: NavMesh Movement=True
+BP_FirstPersonCharacter_C.RootMotion=True
+BP_FirstPersonCharacter_C.NavMovement=True
+BP_FirstPersonCharacter_C.Velocity=True
+BP_FirstPersonCharacter_C.PlanarMovement=True
+BP_FirstPersonCharacter_C.MovementComponent=True
+BP_FirstPersonCharacter_C.MotionController=True
+BP_FirstPersonCharacter_C.Shape=True
+BP_FirstPersonCharacter_C.Navigation=True
+BP_NPC_C.Tick=True
+BP_NPC_C.Rendering=True
+BP_NPC_C.Replication=True
+BP_NPC_C.Input=True
+BP_NPC_C.Actor=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+BP_NPC_C.TransformCommon=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.ImportSettings=True
+StaticMesh.Collision=True
+StaticMesh.Transform=True
+StaticMesh.Miscellaneous=True
+StaticMesh.Thumbnail=True
+StaticMesh.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonCPP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/HUD/GameHUD.GameHUD=0
 /Game/Dev/HUD/GameHUD.GameHUD=0
+/Game/UI/HUD/HUDWidget.HUDWidget=0
+/Game/UI/HUD/BP_HUDWidget.BP_HUDWidget=0
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1078,11 +1182,11 @@ PreviewHeight=720
 PreviewAspectRatio=16:9
 
 [DetailPropertyExpansion]
-VerticalBox="\"Object.Layout.Slot.Object.Layout.Layout"
+VerticalBox="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Render Transform.RenderTransform\" "
+Object=
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Render Transform.RenderTransform\" "
@@ -1093,5 +1197,23 @@ UserWidget="\"Object.Render Transform.RenderTransform\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 HUDWidget_C="\"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Render Transform.RenderTransform\" "
+BP_HUDWidget_C="\"Object.Render Transform.RenderTransform\" "
+
+[/Script/UnrealEd.ContentBrowserSettings]
+DisplayL10NFolder=False
+DisplayPluginFolders=False
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[PlacementMode]
+RecentlyPlaced=/Game/Characters/NPC/BP_NPC.BP_NPC;
+
+[MessageLog]
+LastLogListing=EditorErrors
 
 
