Testing sockets in NPCs

--- a/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -735,6 +735,7 @@ PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+StaticMesh=StaticMesh.Collision.Collision,
 
 [DetailCategories]
 FirstPersonCharacter_C.TransformCommon=True
@@ -1168,6 +1169,39 @@ StaticMesh.Transform=True
 StaticMesh.Miscellaneous=True
 StaticMesh.Thumbnail=True
 StaticMesh.Navigation=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.LodSettings=True
+FbxImportUI.Material=True
+HierarchicalInstancedStaticMeshComponent.Variable=True
+HierarchicalInstancedStaticMeshComponent.TransformCommon=True
+HierarchicalInstancedStaticMeshComponent.Sockets=True
+HierarchicalInstancedStaticMeshComponent.StaticMesh=True
+HierarchicalInstancedStaticMeshComponent.Instances=True
+HierarchicalInstancedStaticMeshComponent.InstancedStaticMeshComponent=True
+HierarchicalInstancedStaticMeshComponent.Culling=True
+HierarchicalInstancedStaticMeshComponent.Physics=True
+HierarchicalInstancedStaticMeshComponent.Collision=True
+HierarchicalInstancedStaticMeshComponent.Lighting=True
+HierarchicalInstancedStaticMeshComponent.Rendering=True
+HierarchicalInstancedStaticMeshComponent.Tags=True
+HierarchicalInstancedStaticMeshComponent.ComponentReplication=True
+HierarchicalInstancedStaticMeshComponent.Cooking=True
+HierarchicalInstancedStaticMeshComponent.Events=True
+HierarchicalInstancedStaticMeshComponent.Materials=True
+StaticMeshSocket.StaticMeshSocket=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
+BP_FirstPersonCharacter_C.Camera=True
+BP_FirstPersonCharacter_C.Tick=True
+BP_FirstPersonCharacter_C.Gameplay=True
+BP_FirstPersonCharacter_C.Projectile=True
+BP_FirstPersonCharacter_C.Character=True
+BP_FirstPersonCharacter_C.Pawn=True
+BP_FirstPersonCharacter_C.Replication=True
+BP_FirstPersonCharacter_C.Input=True
+BP_FirstPersonCharacter_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonCPP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -1186,7 +1220,7 @@ VerticalBox="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Render Transform.RenderTransform\" "
-Object=
+Object="\"Object.Render Transform.RenderTransform\" "
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Render Transform.RenderTransform\" "
@@ -1200,6 +1234,9 @@ HorizontalBox="\"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Render Transform.RenderTransform\" "
 BP_HUDWidget_C="\"Object.Render Transform.RenderTransform\" "
+StaticMesh="\"Object.BodySetup.Object.AggGeom\" "
+BP_NPC_C="\"Object.LeftEyeAddons\" "
+CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 
 [/Script/UnrealEd.ContentBrowserSettings]
 DisplayL10NFolder=False
@@ -1210,10 +1247,83 @@ OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
+[/Script/UnrealEd.FbxImportUI]
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+
 [PlacementMode]
 RecentlyPlaced=/Game/Characters/NPC/BP_NPC.BP_NPC;
 
 [MessageLog]
 LastLogListing=EditorErrors
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=False
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+bKeepOverlappingVertices=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+bImportCustomAttribute=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[DetailCategoriesAdvanced]
+StaticMesh.Collision=True
 
 
