--- a/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Jam2018/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -94,7 +94,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonCPP/Maps/TestMapMikel
 
 [ModuleFileTracking]
-Jam2018.TimeStamp=2018.01.27-02.49.08
+Jam2018.TimeStamp=2018.01.27-04.06.55
 Jam2018.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.01.25-18.25.31
 PakFile.LastCompileMethod=External
@@ -632,7 +632,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1360.000 Y=800.000
+WindowSize=X=1370.000 Y=810.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1147,10 +1147,28 @@ Volume.TransformCommon=True
 Volume.BrushSettings=True
 Volume.Actor=True
 Actor.Actor=True
+MoveTowardsPosBehaviorComponent.Variable=True
+MoveTowardsPosBehaviorComponent.Sockets=True
+MoveTowardsPosBehaviorComponent.MoveTowardsPosBehaviorComponent=True
+MoveTowardsPosBehaviorComponent.Tags=True
+MoveTowardsPosBehaviorComponent.ComponentReplication=True
+MoveTowardsPosBehaviorComponent.Activation=True
+MoveTowardsPosBehaviorComponent.Cooking=True
+MoveTowardsPosBehaviorComponent.Events=True
+BP_MoveTowardsPosBehaviorCmp_C.ComponentTick=True
+BP_MoveTowardsPosBehaviorCmp_C.MoveTowardsPosBehaviorComponent=True
+BP_MoveTowardsPosBehaviorCmp_C.Tags=True
+BP_MoveTowardsPosBehaviorCmp_C.ComponentReplication=True
+BP_MoveTowardsPosBehaviorCmp_C.Activation=True
+BP_MoveTowardsPosBehaviorCmp_C.Variable=True
+BP_MoveTowardsPosBehaviorCmp_C.Cooking=True
+BP_MoveTowardsPosBehaviorCmp_C.Sockets=True
+BP_MoveTowardsPosBehaviorCmp_C.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonCPP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/StarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech_Hex_Tile_Pulse=1
+/Game/BP_MoveTowardsPosBehaviorCmp.BP_MoveTowardsPosBehaviorCmp=0
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" "
